Added axios, errors handling and dynamic icons

--- a/src/assets/css/WeekFooter.css
+++ b/src/assets/css/WeekFooter.css
@@ -58,6 +58,11 @@ footer {
     }
 }
 
+.summary-error {
+    color: white;
+    margin-bottom: 5em;
+}
+
 /*TABLET*/
 @media (max-width: 1080px) {
     .footer-container {
