--- a/src/assets/css/WeatherForecast.css
+++ b/src/assets/css/WeatherForecast.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
-    margin-top: 4em;
+    margin-top: 2.5em;
     margin-bottom: 3em;
     width: 70%;
     height: 100%;
@@ -28,6 +28,13 @@ ul{
     background-color: #ABC9CF;
     border-top-left-radius: inherit;
     border-bottom-left-radius: inherit;
+}
+
+.weather-background {
+    background-color: #E0EBED;
+    min-width: 60%;
+    border-top-right-radius: inherit;
+    border-bottom-right-radius: inherit;
 }
 
 .day-col {
